# MovieCollectionManager

./: .dockerignore  .gitattributes  .gitignore  .npmrc  CLAUDE.md  Cargo.toml  README.md  compose.yaml  lcov.info  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
agents/movie-assistant/: .env.local.example  Dockerfile  README.md  langgraph.json  project.json  pyproject.toml
agents/movie-assistant/src/: __init__.py  agui_identity.py  audit_sink.py  circuit_breaker.py  flags.py  gateway.py  graph.py  kill_switch.py  models.py  observability.py  proposals.py  runtime_context.py  runtime_nodes.py  secrets.py  session_expiry.py  state.py  text_match.py
agents/movie-assistant/src/eval/: __init__.py  cassette.py  token_leak_scan.py
agents/movie-assistant/src/guardrails/: __init__.py  output_validators.py  rails.co
agents/movie-assistant/src/nodes/: __init__.py  approval_gate.py  curator.py  export_collection.py  import_collection.py  import_disambiguation.py  import_resolvers.py  navigator.py  organizer.py  query.py  search.py  supervisor.py
agents/movie-assistant/src/tools/: __init__.py  agent_rate_limit.py  generative_ui_tools.py  identity.py  mcp_tools.py  opa.py  spreadsheet_tools.py  token_exchange.py  ui_action_tools.py
agents/movie-assistant/tests/: conftest.py
agents/movie-assistant/tests/fixtures/: adversarial.py
agents/movie-assistant/tests/golden/: compare.py  dataset.json
agents/movie-assistant/tests/golden/cassettes/: inc5-intent-existence-is.json  inc5-intent-organize-move-this.json  inc5-plan-move-sentence-title.json  us040-intent-navigate-collection-qualified.json  us1-extract-coherence.json  us1-extract-no-year.json  us1-intent-add.json  us1-intent-ambiguous-count.json  us1-intent-enrich-about.json  us1-intent-enrich-whatyear.json  us1-intent-enrich.json  us1-intent-organize-move.json  us1-intent-out-of-domain.json  us2-intent-import-bare.json  us2-intent-import-load.json  us2-intent-import-upload.json  us2-intent-import.json  us2-intent-organize-remove.json  us2-intent-organize-tag.json  us2-intent-organize-update.json  us2-plan-move-coded-names.json  us2-plan-move-year-in-title.json  us2-plan-move.json  us2-plan-remove-one.json  us2-plan-remove-two.json  us2-plan-update-owned.json  us3-extract-this.json  us3-intent-add-this.json  us3-intent-export-download.json  us3-intent-export-save.json  us3-intent-export.json  us3-intent-navigate-open.json  us3-intent-navigate-prefill.json  us4-extract-filtered.json  us4-extract-find.json  us4-intent-count.json  us4-intent-find.json  us4-intent-list.json  us7-intent-search-find.json  us7-intent-search-lookup.json  (+3 more)
agents/movie-assistant/tests/integration/: conftest.py  kc_admin.py  live_model.py  test_add_flow.py  test_audit_opensearch.py  test_authz_parity.py  test_curator_enrich.py  test_export_flow.py  test_gateway_add_e2e.py  test_gateway_boot.py  test_gateway_identity_bridge.py  test_gateway_real_graph.py  test_golden_pairs.py  test_import_flow.py  test_models_build.py  test_observability_sc008.py  test_opa_authz.py  test_organize_batch.py  test_out_of_domain.py  test_query_flow.py  test_resolution_realistic.py  test_search_flow.py  test_token_reexchange.py  test_unleash_flags.py  test_write_resilience.py
agents/movie-assistant/tests/unit/: test_add_flow_graph.py  test_agent_config_injection.py  test_agent_rate_limit.py  test_agui_identity.py  test_allowlist.py  test_approval_gate.py  test_audit_sink.py  test_cassette.py  test_circuit_breaker.py  test_column_mapping.py  test_context_resolution.py  test_curator.py  test_current_screen_contract.py  test_decision_fns.py  test_disambiguation_flow.py  test_export.py  test_export_runtime.py  test_flags.py  test_generative_ui_tools.py  test_golden_compare.py  test_graceful_degradation.py  test_graph.py  test_identity.py  test_import_apply.py  test_import_bridge.py  test_import_dedup.py  test_import_disambiguation.py  test_import_disambiguation_runtime.py  test_import_preview.py  test_import_preview_resolutions.py  test_import_proposals.py  test_import_runtime.py  test_import_transform.py  test_import_transitions.py  test_mcp_invoke.py  test_models.py  test_models_cassette.py  test_navigator.py  test_observability.py  test_opa.py  (+23 more)
backend/mc-service/: Cargo.toml  Dockerfile  project.json
backend/mc-service/src/: config.rs  lib.rs  main.rs
backend/mc-service/src/adapters/mongodb/: client.rs  collection_repository.rs  indexes.rs  mod.rs  movie_repository.rs
backend/mc-service/src/api/: health.rs  metrics.rs  mod.rs  router.rs  state.rs
backend/mc-service/src/api/collections/: create.rs  delete.rs  get.rs  list.rs  update.rs
backend/mc-service/src/api/middleware/: auth.rs  error_handler.rs  logging.rs  mod.rs
backend/mc-service/src/api/movies/: count.rs  create.rs  delete.rs  filter_options.rs  get.rs  list.rs  mod.rs  update.rs
backend/mc-service/src/application/: access_control.rs  mod.rs
backend/mc-service/src/application/commands/: create_collection.rs  create_movie.rs  delete_collection.rs  delete_movie.rs  mod.rs  set_default_collection.rs  update_collection.rs  update_movie.rs
backend/mc-service/src/application/dtos/: mod.rs  (+2 more)
backend/mc-service/src/domain/: collection.rs  errors.rs  external_id.rs  mod.rs  movie.rs
backend/mc-service/tests/integration/: collections_test.rs  health_test.rs  movies_test.rs
mcp-servers/spreadsheet-mcp/: Dockerfile  README.md  project.json  pyproject.toml
mcp-servers/spreadsheet-mcp/src/: builder.py  observability.py  parser.py  server.py  store.py
mcp-servers/spreadsheet-mcp/tests/integration/: test_parse_store.py
mcp-servers/spreadsheet-mcp/tests/unit/: test_build.py  test_parse.py  test_store_parsed.py
mcp-servers/web-api-mcp/: Dockerfile  README.md  project.json  pyproject.toml
mcp-servers/web-api-mcp/src/: __init__.py  observability.py  secrets.py  server.py  tools.py
mcp-servers/web-api-mcp/tests/integration/: conftest.py  test_server.py  test_tmdb.py
mcp-servers/web-api-mcp/tests/unit/: test_observability.py  test_secrets.py  test_tmdb_key.py
(+1151 files in other folders)
