[project]
name = "movie-assistant"
version = "0.1.0"
description = "LangGraph supervisor orchestration for the MCM conversational assistant (Phase 1 MVP)"
requires-python = ">=3.13"
# Versions are intentionally left as lower bounds here; the committed uv lockfile
# (`uv lock`) pins exact versions (constitution: dependencies pinned via lockfile).
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",      # default provider (research R1)
    "langchain-anthropic>=0.3",   # documented fallback provider
    # Agent Gateway = FastAPI app emitting AG-UI natively via ag-ui-langgraph
    # (copilotkit.LangGraphAGUIAgent + add_langgraph_fastapi_endpoint).
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "ag-ui-langgraph>=0.0.6",
    "copilotkit>=0.1",
    "mcp>=1.28.1",
    "nemoguardrails>=0.11",
    "guardrails-ai>=0.5",
    "pydantic>=2.7",
    "langfuse>=2.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "hvac>=2.0",                  # HashiCorp Vault client — runtime secret injection (T030a)
    "psycopg[binary]>=3.2",       # PostgreSQL checkpointer (agent-db)
    "httpx>=0.27",
    "unleashclient>=6.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.155.2",
    "redis>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "golden: model-decision golden-pair regression gate (live Claude or cassette replay)",
    "leak_scan: SC-004 token-leak scan (no auth token in state/logs/traces) — runs in the unit gate",
    "ci_quarantine: pre-existing failure on the CI/Claude env, tracked separately (deselected in app-ci's live-integration step via `-m 'not golden and not ci_quarantine'`). Each entry is a known, filed defect to fix — not a licence to silence flaky tests.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
