[project]
name = "spreadsheet-mcp"
version = "0.1.0"
description = "Scoped-capability MCP server — parse/build spreadsheets (CSV/.xlsx). No backend/network IO; reads/writes only the transient upload store via an opaque handle (014 R3/R11)."
requires-python = ">=3.13"
# Lower bounds only; exact versions pinned by the committed uv lockfile.
dependencies = [
    "mcp>=1.28.1",
    "openpyxl>=3.1",              # .xlsx read+write (no pandas — keep the image light; R2)
    "redis>=5.0",                 # transient upload store (import:file:<handle>; R3)
    "opentelemetry-sdk>=1.27",    # OTel infra tracing → otel-lgtm (parity with movie-mcp)
    "opentelemetry-exporter-otlp>=1.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true

# openpyxl ships no type stubs; treat it as untyped rather than pinning a lagging types-* pkg.
[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
