[project]
name = "web-api-mcp"
version = "0.1.0"
description = "MCP server — outbound-only TMDB movie-metadata lookups (read-only, no internal network)"
requires-python = ">=3.13"
# Lower bounds only; exact versions pinned by the committed uv lockfile.
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
